docked footer and fixed login submit button not active issue after failed login issue

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <a id="modalDialogRedirect" href="" data-role=button>OK</a>
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
     </div>
 
 
@@ -83,7 +83,7 @@
         </form>
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -107,7 +107,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -150,7 +150,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -191,7 +191,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -234,7 +234,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -281,7 +281,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -331,7 +331,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -369,7 +369,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -409,7 +409,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -445,20 +445,28 @@
 
             <ul id="routeCoinsLoadFormList" data-role="listview" data-inset="true">
                     <li id="routeCoinsLoadQuartersListItem"> 
+                    <div data-role="fieldcontain">
                     <label for="routeCoinsLoadQuarters">Quarters:</label>
                     <input type="number" name="routeCoinsLoadQuarters" id="routeCoinsLoadQuarters" value="0" required digits/> 
+                    </div>
                     </li>
                     <li id="routeCoinsLoadDimesListItem"> 
+                    <div data-role="fieldcontain">
                     <label for="routeCoinsLoadDimes">Dimes:</label>
                     <input type="number" name="routeCoinsLoadDimes" id="routeCoinsLoadDimes" value="0" required digits/> 
+                    </div>
                     </li>
                     <li id="routeCoinsLoadNickelsListItem"> 
+                    <div data-role="fieldcontain">
                     <label for="routeCoinsLoadNickels">Nickels:</label>
                     <input type="number" name="routeCoinsLoadNickels" id="routeCoinsLoadNickels" value="0" required digits/> 
+                    </div>
                     </li>
                     <li id="routeCoinsLoadPenniesListItem"> 
+                    <div data-role="fieldcontain">
                     <label for="routeCoinsLoadPennies">Pennies:</label>
                     <input type="number" name="routeCoinsLoadPennies" id="routeCoinsLoadPennies" value="0" required digits/> 
+                    </div>
                     </li>
             </ul>
 
@@ -473,7 +481,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -517,7 +525,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -561,7 +569,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -598,7 +606,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -626,20 +634,28 @@
 
             <ul id="vanCoinsLoadFormList" data-role="listview" data-inset="true">
                     <li id="vanCoinsLoadQuartersListItem"> 
+                    <div data-role="fieldcontain">
                     <label for="vanCoinsLoadQuarters">Quarters:</label>
                     <input type="number" name="vanCoinsLoadQuarters" id="vanCoinsLoadQuarters" value="0" required digits readonly/> 
+                    </div>
                     </li>
                     <li id="vanCoinsLoadDimesListItem"> 
+                    <div data-role="fieldcontain">
                     <label for="vanCoinsLoadDimes">Dimes:</label>
                     <input type="number" name="vanCoinsLoadDimes" id="vanCoinsLoadDimes" value="0" required digits readonly/> 
+                    </div>
                     </li>
                     <li id="vanCoinsLoadNickelsListItem"> 
+                    <div data-role="fieldcontain">
                     <label for="vanCoinsLoadNickels">Nickels:</label>
                     <input type="number" name="vanCoinsLoadNickels" id="vanCoinsLoadNickels" value="0" required digits readonly/> 
+                    </div>
                     </li>
                     <li id="vanCoinsLoadPenniesListItem"> 
+                    <div data-role="fieldcontain">
                     <label for="vanCoinsLoadPennies">Pennies:</label>
                     <input type="number" name="vanCoinsLoadPennies" id="vanCoinsLoadPennies" value="0" required digits readonly/> 
+                    </div>
                     </li>
             </ul>
 
@@ -654,7 +670,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -699,7 +715,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -742,7 +758,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -784,7 +800,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -829,7 +845,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -867,7 +883,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -909,7 +925,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -950,7 +966,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -998,7 +1014,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -1051,7 +1067,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -1107,7 +1123,7 @@
 
     </div>
 
-    <div data-role="footer">
+    <div data-role="footer" data-position="fixed">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
