--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!-- modal dialog -->
 <div id="modalDialog" data-role="dialog" data-theme="a" data-close-btn="none">
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
     <h1> </h1>
     </div>
 
@@ -54,7 +54,7 @@
     
 <div id="loginPage" data-role="page" data-theme="a">
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
             <h1>U-Vend, Inc.</h1>
     </div>
 
@@ -90,7 +90,7 @@
 
 <div id="homePage" data-role="page" data-theme="a">
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
             <h1>U-Vend, Inc.</h1>
     </div>
 
@@ -132,7 +132,7 @@
         <p><a href="" data-role="button" onclick="app.logout()">Log Out</a></p>
     </div>
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
         <a href="#homePage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
@@ -170,7 +170,7 @@
 
     </div>
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
         <a href="#routeCupsRoutesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
@@ -208,7 +208,7 @@
 
     </div>
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
     <!-- <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>-->
         <a href="#routeCupsMachinesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
@@ -241,7 +241,7 @@
 
 <div id="routeCupsFlavorAddPage" data-role="page" data-theme="a">
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
         <a href="#routeCupsFlavorsPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
     </div>
@@ -288,7 +288,7 @@
 
 <div id="routeCupsFlavorEditPage" data-role="page" data-theme="a">
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
         <a href="#routeCupsFlavorsPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
     </div>
@@ -351,7 +351,7 @@
         <p><a href="" data-role="button" onclick="app.logout()">Log Out</a></p>
     </div>
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
         <a href="#homePage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
@@ -389,7 +389,7 @@
 
     </div>
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
         <a href="#routeCoinsRoutesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
@@ -426,7 +426,7 @@
 
     </div>
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
         <a href="#routeCoinsMachinesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
     </div>
@@ -447,7 +447,7 @@
                     <li id="routeCoinsLoadQuartersListItem"> 
                     <div data-role="fieldcontain">
                     <label for="routeCoinsLoadQuarters">Quarters:</label>
-                    <input type="number" name="routeCoinsLoadQuarters" id="routeCoinsLoadQuarters" value="0" required digits/> 
+                    <input type="number" name="routeCoinsLoadQuarters" id="routeCoinsLoadQuarters" value="0" required digits/>
                     </div>
                     </li>
                     <li id="routeCoinsLoadDimesListItem"> 
@@ -507,7 +507,7 @@
         <p><a href="" data-role="button" onclick="app.logout()">Log Out</a></p>
     </div>
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
         <a href="#homePage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
@@ -534,7 +534,7 @@
 
 <div id="vanCupsFlavorsPage" data-role="page" data-theme="a">
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
         <a href="#vanCupsRoutesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
     </div>
@@ -588,7 +588,7 @@
         <p><a href="" data-role="button" onclick="app.logout()">Log Out</a></p>
     </div>
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
         <a href="#homePage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
@@ -615,7 +615,7 @@
 
 <div id="vanCoinsLoadPage" data-role="page" data-theme="a">
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
         <a href="#vanCoinsRoutesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
     </div>
@@ -696,7 +696,7 @@
         <p><a href="" data-role="button" onclick="app.logout()">Log Out</a></p>
     </div>
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
     <!-- <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>-->
         <a href="#homePage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
@@ -737,7 +737,7 @@
 
     </div>
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
     <!-- <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>-->
         <a href="#machineCupsRoutesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
@@ -778,7 +778,7 @@
 
     </div>
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
     <!-- <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>-->
         <a href="#machineCupsLocationsPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
@@ -807,7 +807,7 @@
 
 <div id="machineCupsFlavorsPage" data-role="page" data-theme="a">
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
     <!-- <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>-->
         <a href="#machineCupsMachinesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
@@ -865,7 +865,7 @@
         <p><a href="" data-role="button" onclick="app.logout()">Log Out</a></p>
     </div>
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
         <a href="#homePage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
@@ -905,7 +905,7 @@
 
     </div>
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
         <a href="#machineCoinsRoutesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
@@ -945,7 +945,7 @@
 
     </div>
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
         <a href="#machineCoinsLocationsPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
@@ -989,7 +989,7 @@
 
     </div>
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
     <!-- <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>-->
         <a href="#machineCoinsMachinesPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
@@ -1023,7 +1023,7 @@
 
 <div id="machineCoinsLoadPage" data-role="page" data-theme="a">
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
     <!-- <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>-->
         <a href="#machineCoinsLoadPickupOptionsPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
@@ -1079,7 +1079,7 @@
 
 <div id="machineCoinsPickupPage" data-role="page" data-theme="a">
 
-    <div data-role="header">
+    <div data-role="header" data-position="fixed">
     <!-- <a href="" data-rel="back" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>-->
         <a href="#machineCoinsLoadPickupOptionsPage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
