added routeMachines table - supports deleting records

--- a/index.html
+++ b/index.html
@@ -252,8 +252,9 @@
 
     <!-- // gets populated with...
         <li> <a href="#machineFlavorsPage">Machine 1<span class="ui-li-count">250</span></a> </li>
-    -->
     <ul id="routeCupsMachinesPageList" data-role="listview" data-inset="true"></ul>
+    -->
+    <ul id="routeCupsMachinesPageOuterList" data-role="collapsible-set" data-inset="true"></ul>
 
 
     </div>
