--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         </form>
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
@@ -172,7 +172,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -197,7 +197,7 @@
         <p><a href="" data-role="button" onclick="app.logout()">Log Out</a></p>
     </div>
 
-    <div data-role="header" data-position="fixed">
+    <div data-role="header">
         <a href="#homePage" data-icon="arrow-l" data-iconpos="notext" data-direction="reverse" data-transition="slide">Back</a>
         <h1>U-Vend, Inc.</h1>
         <a onclick="$('.mypanel:visible').panel('open');" data-icon="bars" data-iconpos="notext" class="ui-btn-right">Bars</a>
@@ -217,7 +217,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 
@@ -253,7 +253,7 @@
 
     </div>
 
-    <div data-role="footer" data-position="fixed">
+    <div data-role="footer">
         <h4>&copy; U-Vend, Inc.</h4>
     </div>
 </div>
