added user-scalable no to viewport meta data in order to fix annoying transition flicker

--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
         <li><a href="#vanCoinsRoutesPage" data-transition="slide">Van Load Coins</a></li>
         <li><a href="#machineCupsRoutesPage" data-transition="slide">Machine Load Cups</a></li>
         <li><a href="#machineCoinsRoutesPage" data-transition="slide">Machine Load Coins</a></li>
+        </ul>
+
+        <ul data-role="listview" data-inset="true">
         <li><a href="" data-role="button" onclick="app.logout()">Log Out</a></li>
         </ul>
 
