fixing collapsable set refresh issue

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <li> <a href="#machineFlavorsPage">Machine 1<span class="ui-li-count">250</span></a> </li>
     <ul id="routeCupsMachinesPageList" data-role="listview" data-inset="true"></ul>
     -->
-    <ul id="routeCupsMachinesPageOuterList" data-role="collapsible-set" data-inset="true"></ul>
+    <div id="routeCupsMachinesPageOuterList" data-role="collapsible-set"></div>
 
 
     </div>
